--- a/app/login.html
+++ b/app/login.html
@@ -16,7 +16,7 @@
     <title>Ярдэмче</title>
   </head>
 
-  <body class="main__body main__body--fullscreen">
+  <body>
     <header class="header header--fullscreen">
       <div class="container">
         <div class="header__inner">
