Account: fixes in edit form (html+css)

--- a/app/account.html
+++ b/app/account.html
@@ -450,7 +450,8 @@
             <textarea
               class="edit-form__textarea"
               name="description"
-              rows="23"
+              placeholder="Напишите здесь что-нибудь..."
+              rows="10"
             ></textarea>
           </div>
         </form>
