--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
                 >
               </li>
             </ul>
-            <div class="menu__list-wrapper active">
+            <div class="menu__list-wrapper">
               <ul class="menu__list">
                 <li class="menu__list-item">
                   <a href="#" class="menu__list-itemlink">Главная</a>
