menu box-shadow fixes (css)

--- a/app/account-long.html
+++ b/app/account-long.html
@@ -114,7 +114,7 @@
             <div class="client__profile-inner">
               <div class="client__img-wrapper">
                 <img
-                  src="./images/client-photo.jpg"
+                  src="./images/28.jpg"
                   alt="Фото клиента"
                   class="client__img client__img--desktop"
                 />
