Account-long portfolio: wrapped delete btn in form (html)

--- a/app/account-long.html
+++ b/app/account-long.html
@@ -289,33 +289,12 @@
                     class="portfolio__slider-img"
                   />
                 </div>
-                <button class="portfolio__slide-delete" type="submit">
-                  x
-                </button>
-              </div>
-              <div class="portfolio__slider-item swiper-slide">
-                <div class="portfolio__item-wrapper">
-                  <img
-                    src="./images/slider-2.jpg"
-                    alt="Фото портфолио"
-                    class="portfolio__slider-img"
-                  />
-                </div>
-                <button class="portfolio__slide-delete" type="submit">
-                  x
-                </button>
-              </div>
-              <div class="portfolio__slider-item swiper-slide">
-                <div class="portfolio__item-wrapper">
-                  <img
-                    src="./images/slider-3.jpg"
-                    alt="Фото портфолио"
-                    class="portfolio__slider-img"
-                  />
+                <form type="submit">
                   <button class="portfolio__slide-delete" type="submit">
                     x
                   </button>
-                </div>
+                </form>
+               
               </div>
               <div class="portfolio__slider-item swiper-slide">
                 <div class="portfolio__item-wrapper">
@@ -325,6 +304,11 @@
                     class="portfolio__slider-img"
                   />
                 </div>
+                <form type="submit">
+                <button class="portfolio__slide-delete" type="submit">
+                  x
+                </button>
+              </form>
               </div>
               <div class="portfolio__slider-item swiper-slide">
                 <div class="portfolio__item-wrapper">
@@ -333,6 +317,39 @@
                     alt="Фото портфолио"
                     class="portfolio__slider-img"
                   />
+                  <form type="submit">
+                  <button class="portfolio__slide-delete" type="submit">
+                    x
+                  </button>
+                  </form>
+                </div>
+              </div>
+              <div class="portfolio__slider-item swiper-slide">
+                <div class="portfolio__item-wrapper">
+                  <img
+                    src="./images/slider-2.jpg"
+                    alt="Фото портфолио"
+                    class="portfolio__slider-img"
+                  />
+                  <form type="submit">
+                    <button class="portfolio__slide-delete" type="submit">
+                      x
+                    </button>
+                    </form>
+                </div>
+              </div>
+              <div class="portfolio__slider-item swiper-slide">
+                <div class="portfolio__item-wrapper">
+                  <img
+                    src="./images/slider-3.jpg"
+                    alt="Фото портфолио"
+                    class="portfolio__slider-img"
+                  />
+                  <form type="submit">
+                    <button class="portfolio__slide-delete" type="submit">
+                      x
+                    </button>
+                    </form>
                 </div>
               </div>
             </div>
