Main page: adaptive (html + css)

--- a/app/index.html
+++ b/app/index.html
@@ -336,6 +336,7 @@
           </p>
         </div>
       </section>
+
       <section class="accent">
         <div class="container">
           <div class="accent__inner">
@@ -348,6 +349,7 @@
           </div>
         </div>
       </section>
+
       <section class="situations">
         <div class="container">
           <h2 class="situations__title title-main">
@@ -431,6 +433,7 @@
           </div>
         </div>
       </section>
+
       <section class="how">
         <div class="container">
           <h2 class="how__title title-main">Как это работает</h2>
@@ -506,13 +509,16 @@
           </div>
         </div>
       </section>
+
       <section class="news">
         <div class="container">
           <div class="news__tabs">
-            <button class="news__title title news__title--active">
+            <button class="news__title title active" data-tabs="news-previews">
               Новости
             </button>
-            <button class="news__title title">Мероприятия</button>
+            <button class="news__title title" data-tabs="events-previews">
+              Мероприятия
+            </button>
           </div>
           <ul class="news__items">
             <li
@@ -652,6 +658,26 @@
           opacity="0.4"
           d="M30.7071 8.70711C31.0976 8.31658 31.0976 7.68342 30.7071 7.29289L24.3431 0.928932C23.9526 0.538408 23.3195 0.538408 22.9289 0.928932C22.5384 1.31946 22.5384 1.95262 22.9289 2.34315L28.5858 8L22.9289 13.6569C22.5384 14.0474 22.5384 14.6805 22.9289 15.0711C23.3195 15.4616 23.9526 15.4616 24.3431 15.0711L30.7071 8.70711ZM0 9H30V7H0V9Z"
           fill="black"
+        />
+      </symbol>
+      <symbol
+        id="icon-write"
+        width="25"
+        height="24"
+        viewBox="0 0 25 24"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          opacity="0.4"
+          d="M20.4925 18.9532H14.7982C14.2426 18.9532 13.7908 19.4123 13.7908 19.9766C13.7908 20.5421 14.2426 21 14.7982 21H20.4925C21.048 21 21.4999 20.5421 21.4999 19.9766C21.4999 19.4123 21.048 18.9532 20.4925 18.9532Z"
+        />
+        <path
+          d="M10.809 6.90385L16.2049 11.2639C16.335 11.3682 16.3573 11.5596 16.2557 11.6929L9.85874 20.0282C9.45662 20.5431 8.86402 20.8344 8.22908 20.8452L4.73696 20.8882C4.55071 20.8903 4.38775 20.7613 4.34542 20.5764L3.55175 17.1258C3.41419 16.4915 3.55175 15.8358 3.95388 15.3306L10.3826 6.95545C10.4863 6.82108 10.6778 6.79743 10.809 6.90385Z"
+        />
+        <path
+          opacity="0.4"
+          d="M18.6205 8.66544L17.5803 9.96401C17.4755 10.0962 17.2872 10.1177 17.157 10.0124C15.8924 8.98901 12.6543 6.36285 11.7559 5.63509C11.6247 5.52759 11.6067 5.33625 11.7125 5.20295L12.7157 3.95706C13.6257 2.78534 15.2131 2.67784 16.4935 3.69906L17.9644 4.87078C18.5676 5.34377 18.9698 5.96726 19.1073 6.62299C19.2661 7.3443 19.0967 8.0527 18.6205 8.66544Z"
         />
       </symbol>
     </svg>
