Account-long: floating button (html + css)

--- a/app/account-long.html
+++ b/app/account-long.html
@@ -645,6 +645,9 @@
               </li>
             </ul>
           </section>
+          <div class="rate btn">
+            <a href="#" class="rate__btn btn">Оценить</a>
+            </div>
     </main>
 
 
